Improved saving results version and fixed optuna studies

--- a/code/forecasting_final.ipynb
+++ b/code/forecasting_final.ipynb
@@ -61122,6 +61122,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Create a list of unique_ids\n",
+    "unique_ids = ['id1', 'id2', 'id3', 'id4']\n",
+    "\n",
+    "# Create a list of infinite floats\n",
+    "rsmle_values = [float('inf')] * len(unique_ids)\n",
+    "\n",
+    "# Create the dataframe\n",
+    "df = pd.DataFrame({'unique_id': unique_ids, 'rsmle': rsmle_values})\n",
+    "\n",
+    "# Display the dataframe\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [],
@@ -61372,9 +61394,10 @@
    ],
    "source": [
     "import optuna\n",
-    "from sklearn.metrics import mean_squared_log_error\n",
+    "from sklearn.metrics import mean_squared_log_error, mean_squared_error, mean_absolute_error, r2_score, mean_absolute_percentage_error\n",
     "import re\n",
     "from time import time\n",
+    "from datetime import datetime\n",
     "\n",
     "\n",
     "\n",
@@ -61382,13 +61405,20 @@
     "\n",
     "optuna.logging.set_verbosity(optuna.logging.ERROR)\n",
     "\n",
-    "\n",
+    "error_df = pd.DataFrame({\n",
+    "    \"unique_id\": encoded_merged_train[\"unique_id\"].unique(), \n",
+    "    \"msle\": [float('inf')] * len(encoded_merged_train[\"unique_id\"].unique())\n",
+    "    \"mse\": [float('inf')] * len(encoded_merged_train[\"unique_id\"].unique())\n",
+    "    \"mae\": [float('inf')] * len(encoded_merged_train[\"unique_id\"].unique())\n",
+    "    \"r2\": [float('inf')] * len(encoded_merged_train[\"unique_id\"].unique())\n",
+    "    \"mape\": [float('inf')] * len(encoded_merged_train[\"unique_id\"].unique())\n",
+    "    })\n",
+    "best_predictions_df = pd.DataFrame()\n",
     "    \n",
     "for key, dataframe in split_dataframe_dict.items():\n",
     "\n",
     "    print(\"current dataframe: \" + key)\n",
     "    start = time()\n",
-    "    key = re.sub(r'[^ء-يa-zA-Z]', '', key)\n",
     "\n",
     "    dataframe.columns = [re.sub(r'\\W+', '', col) for col in dataframe.columns]\n",
     "\n",
@@ -61417,19 +61447,37 @@
     "        \n",
     "        return error\n",
     "\n",
-    "    study = optuna.create_study(direction=\"minimize\", storage=\"sqlite:///C:/Users/felsp/Documents/Studium/Master/Forecasting/ForecastingUniProject/db.sqlite3\", study_name=f\"{model}_{key}\", load_if_exists=True)\n",
+    "    study = optuna.create_study(direction=\"minimize\", storage=\"sqlite:///db.sqlite3\", study_name=f\"{model}_{key}\", load_if_exists=True)\n",
     "    study.optimize(objective, n_trials=80, callbacks=[champion_callback])\n",
     "\n",
     "    prediction = run_forecast(train, valid, h, study.best_params, model)\n",
-    "\n",
+    "    \n",
     "    for unique_id in dataframe[\"unique_id\"].unique():\n",
-    "        if study.best_value < best_model_per_unique_id[unique_id][\"error\"]:\n",
+    "        if study.best_value < error_df[error_df[\"unique_id\"] == unique_id][error_function]:\n",
     "            filtered_rows = dataframe[dataframe[\"unique_id\"] == unique_id]\n",
-    "            best_model_per_unique_id[unique_id] = {\"error\": study.best_value, \"prediction\": filtered_rows, \"params\": study.best_params}\n",
-    "    print(f\"Time: {(time()-start)/60}\")\n",
+    "            best_predictions_df = best_predictions_df.drop(best_predictions_df[best_predictions_df[\"unique_id\"] == unique_id].index)\n",
+    "            best_predictions_df = pd.concat([best_predictions_df, filtered_rows])\n",
     "\n",
-    "result_df = pd.DataFrame(best_model_per_unique_id)\n",
-    "result_df.to_parquet(\"C:/Users/felsp/Documents/Studium/Master/Forecasting/ForecastingUniProject/results/first_try.parquet\")"
+    "            error_df.loc[error_df[\"unique_id\"] == unique_id, \"msle\"] = study.best_value\n",
+    "            error_df.loc[error_df[\"unique_id\"] == unique_id, \"mse\"] = mean_squared_error(prediction['y'], prediction[model])\n",
+    "            error_df.loc[error_df[\"unique_id\"] == unique_id, \"mae\"] = mean_absolute_error(prediction['y'], prediction[model])\n",
+    "            error_df.loc[error_df[\"unique_id\"] == unique_id, \"r2\"] = r2_score(prediction['y'], prediction[model])\n",
+    "            error_df.loc[error_df[\"unique_id\"] == unique_id, \"mape\"] = mean_absolute_percentage_error(prediction['y'], prediction[model])\n",
+    "\n",
+    "            print(f\"Time: {(time()-start)/60}\")\n",
+    "\n",
+    "\n",
+    "best_predictions_df.to_parquet(f\"../results/prediction_dfs/prediction_{model}_{datetime.strftime()}.parquet\")\n",
+    "error_df.to_parquet(f\"../results/prediction_dfs/error_{model}_{datetime.strftime()}.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.scatter(best_predictions_df, x=model, y=\"y\", title=f\"Comparison of actuals vs best predicions per unique_id for {model}\", opacity=0.2, trendline=\"ols\", trendline_color_override=\"red\")"
    ]
   },
   {
