Updated todo list

--- a/code/forecasting_final.ipynb
+++ b/code/forecasting_final.ipynb
@@ -61486,9 +61486,11 @@
    "source": [
     "What to do next:\n",
     "\n",
-    "- add way automatic way of training different clusters etc\n",
-    "- Future Leakage Fix einbauen\n",
-    "- Analyse verschiedener Modelle"
+    "- Analyse verschiedener Modelle\n",
+    "- Guten plot einbauen der forecast zeigt\n",
+    "- Cross Validation einbauen\n",
+    "- Feature Importance einbauen\n",
+    "- Future Leakage Fix einbauen"
    ]
   }
  ],
