Updated todo list and added ideas

--- a/code/forecasting_final.ipynb
+++ b/code/forecasting_final.ipynb
@@ -61453,7 +61453,7 @@
     "    prediction = run_forecast(train, valid, h, study.best_params, model)\n",
     "    \n",
     "    for unique_id in dataframe[\"unique_id\"].unique():\n",
-    "        if study.best_value < error_df[error_df[\"unique_id\"] == unique_id][error_function]:\n",
+    "        if study.best_value < error_df[error_df[\"unique_id\"] == unique_id][\"msle\"]:\n",
     "            filtered_rows = dataframe[dataframe[\"unique_id\"] == unique_id]\n",
     "            best_predictions_df = best_predictions_df.drop(best_predictions_df[best_predictions_df[\"unique_id\"] == unique_id].index)\n",
     "            best_predictions_df = pd.concat([best_predictions_df, filtered_rows])\n",
@@ -61484,6 +61484,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Der Code hier unter wird noch nicht verwendet, ist für feature_importance gedacht"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from window_ops.rolling import rolling_mean, rolling_max, rolling_min\n",
+    "from xgboost import XGBRegressor\n",
+    "from lightgbm import LGBMRegressor\n",
+    "\n",
+    "def month_start_or_end(dates):\n",
+    "    \"\"\"Date is month start or month end\"\"\"\n",
+    "    return dates.is_month_start | dates.is_month_end\n",
+    "\n",
+    "def is_saturday(dates):\n",
+    "    \"\"\"Date is monday\"\"\"\n",
+    "    return dates.dayofweek == 5\n",
+    "\n",
+    "def get_feature_importance(train, valid, h, config, model):\n",
+    "    if model == \"XGBRegressor\":\n",
+    "        models = [XGBRegressor(random_state=42,\n",
+    "                               n_estimators=config[\"n_estimators\"],\n",
+    "                               learning_rate=config[\"learning_rate\"],\n",
+    "                               max_depth=config[\"max_depth\"],\n",
+    "                               colsample_bytree=config[\"colsample_bytree\"],\n",
+    "                               reg_lambda=config[\"reg_lambda\"]\n",
+    "                               )]\n",
+    "    elif model == \"LGBMRegressor\":\n",
+    "        models = [LGBMRegressor(random_state=42,\n",
+    "                                n_estimators=config[\"n_estimators\"],\n",
+    "                                learning_rate=config[\"learning_rate\"],\n",
+    "                                max_depth=config[\"max_depth\"],\n",
+    "                                num_leaves=config[\"num_leaves\"],\n",
+    "                                min_data_in_leaf=config[\"min_data_in_leaf\"],\n",
+    "                                bagging_fractiong=config[\"bagging_fraction\"],\n",
+    "                                colsample_bytree=config[\"colsample_bytree\"],\n",
+    "                                lambda_l2=config[\"lambda_l2\"],\n",
+    "                                verbose=-1\n",
+    "                                )]\n",
+    "\n",
+    "    mlfc = mlforecast.MLForecast(models=models,\n",
+    "                    freq='D',\n",
+    "                    lags=[1,7,config[\"lags\"]],\n",
+    "                    lag_transforms={\n",
+    "                        1: [(rolling_mean, 4), (rolling_min, 4), (rolling_max, 4)],\n",
+    "                    },\n",
+    "                    date_features=['week', 'month', 'dayofweek', 'dayofyear', is_saturday, month_start_or_end],\n",
+    "                    num_threads=8)\n",
+    "    \n",
+    "    prep_df = mlfc.preprocess(train)\n",
+    "    \n",
+    "\n",
+    "    merged_prediction = pd.merge(valid, prediction, on=[\"ds\", \"unique_id\"], how=\"inner\")\n",
+    "\n",
+    "    return merged_prediction\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What to do next:\n",
     "\n",
     "- Analyse verschiedener Modelle\n",
@@ -61491,6 +61556,39 @@
     "- Cross Validation einbauen\n",
     "- Feature Importance einbauen\n",
     "- Future Leakage Fix einbauen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ideen für Feature Importance:\n",
+    "- Datensatz mit mlfc.preprocess(train) nur vorbereiten, nicht trainieren oder predicten\n",
+    "- Datensatz anschauen und überprüfen ob wie erwartet\n",
+    "- Datensatz direkt in LightGBM geben und da trainieren und predicten\n",
+    "- Prediction results mit Erwarteten Wert von MLForecast Training vergleichen\n",
+    "- Wenn gleich, dann lgb.plot_importance() machen und anschauen\n",
+    "- Am besten wäre es, wenn wir an die Daten direkt tabelarisch rankommen würden anstatt nur nen plot zu kriegen, damit wir selbst wieder One-Hot-Encodete features aufsummieren können\n",
+    "- Sowohl gain als auch split mal anschauen\n",
+    "- Gleiches für XGBoost einrichten"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Idee für Plot:\n",
+    "- Daten für ein paar unique_ids rausfiltern\n",
+    "- Diese daten dann als Lineplot für y plotten\n",
+    "- Darüber dann die prediction legen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Idee für cross validation:\n",
+    "- Idk, einfach versuchen das iwi mit mlforecast cross validator durchzuboxen"
    ]
   }
  ],
