Corrected missing commas at the end of error_df in hyperparameter tuning

--- a/code/forecasting_final.ipynb
+++ b/code/forecasting_final.ipynb
@@ -61407,10 +61407,10 @@
     "\n",
     "error_df = pd.DataFrame({\n",
     "    \"unique_id\": encoded_merged_train[\"unique_id\"].unique(), \n",
-    "    \"msle\": [float('inf')] * len(encoded_merged_train[\"unique_id\"].unique())\n",
-    "    \"mse\": [float('inf')] * len(encoded_merged_train[\"unique_id\"].unique())\n",
-    "    \"mae\": [float('inf')] * len(encoded_merged_train[\"unique_id\"].unique())\n",
-    "    \"r2\": [float('inf')] * len(encoded_merged_train[\"unique_id\"].unique())\n",
+    "    \"msle\": [float('inf')] * len(encoded_merged_train[\"unique_id\"].unique()),\n",
+    "    \"mse\": [float('inf')] * len(encoded_merged_train[\"unique_id\"].unique()),\n",
+    "    \"mae\": [float('inf')] * len(encoded_merged_train[\"unique_id\"].unique()),\n",
+    "    \"r2\": [float('inf')] * len(encoded_merged_train[\"unique_id\"].unique()),\n",
     "    \"mape\": [float('inf')] * len(encoded_merged_train[\"unique_id\"].unique())\n",
     "    })\n",
     "best_predictions_df = pd.DataFrame()\n",
