--- a/code/forecasting_final.ipynb
+++ b/code/forecasting_final.ipynb
@@ -61290,18 +61290,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "current dataframe: type_D\n",
-      "Valid shape: (8910, 142)\n",
-      "Horizon: 15\n",
-      "Wasn't able to drop rows\n",
-      "Time: 1.7300659855206808\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (3057744638.py, line 28)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[90], line 28\u001b[1;36m\u001b[0m\n\u001b[1;33m    dataframe.columns = [re sub(r'\\W+', '', col) for col in dataframe.columns]\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
      ]
     }
    ],
@@ -61333,7 +61330,7 @@
     "    print(\"current dataframe: \" + key)\n",
     "    start = time()\n",
     "\n",
-    "    dataframe.columns = [re sub(r'\\W+', '', col) for col in dataframe.columns]\n",
+    "    dataframe.columns = [re.sub(r'\\W+', '', col) for col in dataframe.columns]\n",
     "\n",
     "    splitting_date = \"2017.08.01\"\n",
     "    train = dataframe[dataframe[\"ds\"] < splitting_date]\n",
