Results after XGBoost Training

--- a/code/forecasting_final.ipynb
+++ b/code/forecasting_final.ipynb
@@ -4736,7 +4736,32 @@
     }
    ],
    "source": [
-    "px.bar(train.groupby(\"date\").agg({\"sales\": \"sum\"}).reset_index(), x=\"date\", y=\"sales\", title=\"Sales over time\")"
+    "px.bar(train.groupby(\"date\").agg({\"sales\": \"sum\"}).reset_index(), x=\"date\", y=\"sales\", title=\"Sales over time\")\n",
+    "\n",
+    "# should be the code for matplotlib --> to be tested\n",
+    "\n",
+    "# # Group by date and sum the sales\n",
+    "# sales_over_time = train.groupby(\"date\")[\"sales\"].sum()\n",
+    "\n",
+    "# # Extract the date index and sales values\n",
+    "# dates = sales_over_time.index\n",
+    "# sales = sales_over_time.values\n",
+    "\n",
+    "# # Create a bar plot\n",
+    "# plt.figure(figsize=(10, 6))\n",
+    "# plt.bar(dates, sales, color='blue')\n",
+    "\n",
+    "# # Set labels and title\n",
+    "# plt.xlabel('Date')\n",
+    "# plt.ylabel('Sales')\n",
+    "# plt.title('Sales over time')\n",
+    "\n",
+    "# # Rotate x-axis labels for better readability (if necessary)\n",
+    "# plt.xticks(rotation=45, ha='right')\n",
+    "\n",
+    "# # Show the plot\n",
+    "# plt.tight_layout()\n",
+    "# plt.show()\n"
    ]
   },
   {
@@ -4748,7 +4773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -8999,7 +9024,9 @@
     }
    ],
    "source": [
-    "px.line(train.groupby(\"date\").agg({\"sales\": \"sum\"}).reset_index(), x=\"date\", y=\"sales\", title=\"Sales over time\")"
+    "px.line(train.groupby(\"date\").agg({\"sales\": \"sum\"}).reset_index(), x=\"date\", y=\"sales\", title=\"Sales over time\")\n",
+    "\n",
+    "# should be the matplotlib code --> to be tested"
    ]
   },
   {
@@ -61200,7 +61227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61258,7 +61285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61290,15 +61317,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (3057744638.py, line 28)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[90], line 28\u001b[1;36m\u001b[0m\n\u001b[1;33m    dataframe.columns = [re sub(r'\\W+', '', col) for col in dataframe.columns]\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current dataframe: unsplit_dataframe\n",
+      "Initial trial 0 achieved value: 1.2386960172403347\n",
+      "Trial 1 achieved value: 0.6957742198827581 with  78.0313% improvement\n",
+      "Trial 3 achieved value: 0.5641036673866613 with  23.3416% improvement\n",
+      "Trial 14 achieved value: 0.2842993604020939 with  98.4189% improvement\n",
+      "Wasn't able to drop rows\n",
+      "Time: 454.7868724544843\n",
+      "current dataframe: type_D\n",
+      "Initial trial 0 achieved value: 3.9234042091589862\n",
+      "Trial 1 achieved value: 1.7439071571178915 with  124.9778% improvement\n",
+      "Trial 3 achieved value: 0.26905007062928527 with  548.1720% improvement\n",
+      "Trial 8 achieved value: 0.22333539445141848 with  20.4691% improvement\n",
+      "Trial 13 achieved value: 0.2167877261842652 with  3.0203% improvement\n",
+      "Time: 154.99811761379243\n",
+      "current dataframe: type_B\n",
+      "Initial trial 0 achieved value: 2.415318808429226\n",
+      "Trial 1 achieved value: 0.36163659195461134 with  567.8856% improvement\n",
+      "Trial 22 achieved value: 0.34990243994341 with  3.3535% improvement\n",
+      "Time: 64.17602422634761\n",
+      "current dataframe: type_C\n",
+      "Initial trial 0 achieved value: 0.3551408083080238\n",
+      "Trial 15 achieved value: 0.3051714398004886 with  16.3742% improvement\n",
+      "Time: 118.63419094483058\n",
+      "current dataframe: type_E\n",
+      "Initial trial 0 achieved value: 0.46284599746104294\n",
+      "Trial 5 achieved value: 0.4535594577324742 with  2.0475% improvement\n",
+      "Trial 8 achieved value: 0.40102666159435396 with  13.0996% improvement\n",
+      "Trial 11 achieved value: 0.3155850816927319 with  27.0740% improvement\n",
+      "Trial 13 achieved value: 0.2847998913960272 with  10.8094% improvement\n",
+      "Trial 18 achieved value: 0.28038769646834405 with  1.5736% improvement\n",
+      "Time: 51.80670448541641\n",
+      "current dataframe: type_A\n",
+      "Initial trial 0 achieved value: 0.4523518109524671\n",
+      "Trial 4 achieved value: 0.3159257674968303 with  43.1829% improvement\n",
+      "Time: 72.5402481953303\n",
+      "current dataframe: cluster_1\n",
+      "Initial trial 0 achieved value: 0.5975277087268251\n",
+      "Trial 1 achieved value: 0.34210826479885303 with  74.6604% improvement\n",
+      "Trial 6 achieved value: 0.2483269197905638 with  37.7653% improvement\n",
+      "Trial 18 achieved value: 0.2406898450450725 with  3.1730% improvement\n",
+      "Time: 41.08881650765737\n",
+      "current dataframe: cluster_13\n",
+      "Initial trial 0 achieved value: 0.8667347055235011\n",
+      "Trial 2 achieved value: 0.2351777618114897 with  268.5445% improvement\n",
+      "Trial 14 achieved value: 0.22307056401074934 with  5.4275% improvement\n",
+      "Trial 23 achieved value: 0.21405596643061647 with  4.2113% improvement\n",
+      "Trial 24 achieved value: 0.20214804361836308 with  5.8907% improvement\n",
+      "Time: 33.03646816412608\n",
+      "current dataframe: cluster_8\n",
+      "Initial trial 0 achieved value: 0.2972174326458686\n",
+      "Trial 1 achieved value: 0.27727519533449324 with  7.1922% improvement\n",
+      "Trial 2 achieved value: 0.2243126062068488 with  23.6111% improvement\n",
+      "Trial 3 achieved value: 0.15658055975463006 with  43.2570% improvement\n",
+      "Time: 38.43173058430354\n",
+      "current dataframe: cluster_9\n",
+      "Initial trial 0 achieved value: 3.0377166686877044\n",
+      "Trial 1 achieved value: 0.2561344069590569 with  1085.9854% improvement\n",
+      "Trial 4 achieved value: 0.21622056979077792 with  18.4598% improvement\n",
+      "Trial 11 achieved value: 0.19500774900577753 with  10.8779% improvement\n",
+      "Trial 12 achieved value: 0.1899717729088102 with  2.6509% improvement\n",
+      "Trial 13 achieved value: 0.18782535492964936 with  1.1428% improvement\n",
+      "Time: 33.426928913593294\n",
+      "current dataframe: cluster_4\n",
+      "Initial trial 0 achieved value: 4.551230759180182\n",
+      "Trial 1 achieved value: 2.7160503846505155 with  67.5680% improvement\n",
+      "Trial 2 achieved value: 0.5717032543201406 with  375.0804% improvement\n",
+      "Trial 6 achieved value: 0.432668494914196 with  32.1342% improvement\n",
+      "Trial 8 achieved value: 0.2714482998252399 with  59.3926% improvement\n",
+      "Trial 11 achieved value: 0.24507753605814375 with  10.7602% improvement\n",
+      "Time: 40.72596657673518\n",
+      "current dataframe: cluster_6\n",
+      "Initial trial 0 achieved value: 0.8243411790340418\n",
+      "Trial 9 achieved value: 0.3797653525042176 with  117.0659% improvement\n",
+      "Trial 20 achieved value: 0.29184433998906223 with  30.1260% improvement\n",
+      "Time: 51.77922775348028\n",
+      "current dataframe: cluster_15\n",
+      "Initial trial 0 achieved value: 5.633882678871865\n",
+      "Trial 1 achieved value: 1.4096117103778893 with  299.6762% improvement\n",
+      "Trial 2 achieved value: 0.7059597989539149 with  99.6731% improvement\n",
+      "Trial 6 achieved value: 0.41573960077271727 with  69.8082% improvement\n",
+      "Trial 11 achieved value: 0.34222510690147445 with  21.4813% improvement\n",
+      "Trial 14 achieved value: 0.32006506150048825 with  6.9236% improvement\n",
+      "Time: 49.665726566314696\n",
+      "current dataframe: cluster_7\n",
+      "Initial trial 0 achieved value: 0.9757774151661714\n",
+      "Trial 5 achieved value: 0.6291804543681787 with  55.0871% improvement\n",
+      "Trial 10 achieved value: 0.4174611983027824 with  50.7159% improvement\n",
+      "Trial 16 achieved value: 0.4004474546340806 with  4.2487% improvement\n",
+      "Trial 22 achieved value: 0.38058611611914106 with  5.2186% improvement\n",
+      "Time: 25.660026613871256\n",
+      "current dataframe: cluster_3\n",
+      "Initial trial 0 achieved value: 4.342932697810306\n",
+      "Trial 1 achieved value: 0.31802175738977756 with  1265.6087% improvement\n",
+      "Trial 19 achieved value: 0.2876536464486717 with  10.5572% improvement\n",
+      "Trial 21 achieved value: 0.2823296943507526 with  1.8857% improvement\n",
+      "Time: 63.954983631769814\n",
+      "current dataframe: cluster_12\n",
+      "Initial trial 0 achieved value: 7.716537633879516\n",
+      "Trial 2 achieved value: 7.467840650985227 with  3.3302% improvement\n",
+      "Trial 3 achieved value: 6.760848565504178 with  10.4572% improvement\n",
+      "Trial 4 achieved value: 1.2961225915617194 with  421.6211% improvement\n",
+      "Trial 5 achieved value: 0.7717098948305385 with  67.9546% improvement\n",
+      "Trial 6 achieved value: 0.5571738236740544 with  38.5043% improvement\n",
+      "Trial 7 achieved value: 0.4236238549929481 with  31.5256% improvement\n",
+      "Trial 10 achieved value: 0.38585867247296884 with  9.7873% improvement\n",
+      "Trial 11 achieved value: 0.34965626178174863 with  10.3537% improvement\n",
+      "Trial 21 achieved value: 0.34508303185125183 with  1.3253% improvement\n",
+      "Trial 23 achieved value: 0.34417486575797834 with  0.2639% improvement\n",
+      "Time: 23.49220800002416\n",
+      "current dataframe: cluster_16\n",
+      "Initial trial 0 achieved value: 2.0422785674892\n",
+      "Trial 3 achieved value: 0.23983043282240166 with  751.5510% improvement\n",
+      "Trial 11 achieved value: 0.2391058947147481 with  0.3030% improvement\n",
+      "Trial 18 achieved value: 0.2232891381291141 with  7.0835% improvement\n",
+      "Trial 24 achieved value: 0.20516753450272357 with  8.8326% improvement\n",
+      "Time: 19.729426383972168\n",
+      "current dataframe: cluster_10\n",
+      "Initial trial 0 achieved value: 0.9767852094733475\n",
+      "Trial 3 achieved value: 0.6261635384956208 with  55.9952% improvement\n",
+      "Trial 4 achieved value: 0.4833644062021711 with  29.5427% improvement\n",
+      "Trial 9 achieved value: 0.27509999723148043 with  75.7050% improvement\n",
+      "Trial 12 achieved value: 0.2650581197720709 with  3.7886% improvement\n",
+      "Time: 43.313796464602156\n",
+      "current dataframe: cluster_2\n",
+      "Initial trial 0 achieved value: 4.486377902764752\n",
+      "Trial 1 achieved value: 0.6550825093437994 with  584.8569% improvement\n",
+      "Trial 5 achieved value: 0.3644622982244061 with  79.7394% improvement\n",
+      "Trial 7 achieved value: 0.2034909760667592 with  79.1049% improvement\n",
+      "Time: 15.760305746396382\n",
+      "current dataframe: cluster_5\n",
+      "Initial trial 0 achieved value: 2.2754856075784753\n",
+      "Trial 1 achieved value: 1.0369046273044191 with  119.4498% improvement\n",
+      "Trial 6 achieved value: 0.8745794715960145 with  18.5604% improvement\n",
+      "Trial 13 achieved value: 0.3598041052161138 with  143.0710% improvement\n",
+      "Time: 15.710092786947886\n",
+      "current dataframe: cluster_11\n",
+      "Initial trial 0 achieved value: 8.938893886604486\n",
+      "Trial 1 achieved value: 0.3357447921233737 with  2562.4073% improvement\n",
+      "Trial 12 achieved value: 0.3324521204609369 with  0.9904% improvement\n",
+      "Trial 21 achieved value: 0.32752905218089035 with  1.5031% improvement\n",
+      "Time: 28.63543999592463\n",
+      "current dataframe: cluster_14\n",
+      "Initial trial 0 achieved value: 0.47360170384839956\n",
+      "Trial 6 achieved value: 0.4709678167633186 with  0.5592% improvement\n",
+      "Trial 7 achieved value: 0.4581080829170755 with  2.8071% improvement\n",
+      "Trial 13 achieved value: 0.3844728618857073 with  19.1523% improvement\n",
+      "Trial 14 achieved value: 0.31575267695558434 with  21.7639% improvement\n",
+      "Trial 15 achieved value: 0.31567049727010477 with  0.0260% improvement\n",
+      "Time: 45.712645173072815\n",
+      "current dataframe: cluster_17\n",
+      "Initial trial 0 achieved value: 1.03453334470229\n",
+      "Trial 2 achieved value: 0.5393841938708337 with  91.7990% improvement\n",
+      "Trial 12 achieved value: 0.481248792441956 with  12.0801% improvement\n",
+      "Trial 15 achieved value: 0.32843364123274904 with  46.5285% improvement\n",
+      "Trial 16 achieved value: 0.21854419593149277 with  50.2825% improvement\n",
+      "Trial 22 achieved value: 0.2113126400501078 with  3.4222% improvement\n",
+      "Time: 20.65946461757024\n"
      ]
     }
    ],
@@ -61311,7 +61493,7 @@
     "\n",
     "\n",
     "\n",
-    "model = \"LGBMRegressor\"\n",
+    "model = \"XGBRegressor\"\n",
     "\n",
     "optuna.logging.set_verbosity(optuna.logging.ERROR)\n",
     "\n",
